[gd_scene load_steps=13 format=3 uid="uid://b8nnlt0w6w4c"]

[ext_resource type="Script" path="res://Main/GUI/Main Menu/Main Menu.gd" id="1_q7orp"]
[ext_resource type="Script" path="res://Main/GUI/Main Menu/Quit.gd" id="2_mpa0q"]
[ext_resource type="PackedScene" uid="uid://dg6emupc26km1" path="res://Main/GUI/Main Menu/main_menu_visualiser.tscn" id="3_kwb5o"]
[ext_resource type="Script" path="res://Main/GUI/Main Menu/Load Menu.gd" id="3_o07qf"]
[ext_resource type="PackedScene" uid="uid://da42rprsyeljt" path="res://Main/GUI/Main Menu/main_menu_visualiser2.tscn" id="3_y6a6q"]
[ext_resource type="Script" path="res://Main/GUI/Main Menu/main_menu_visualiser2.gd" id="4_26jf7"]
[ext_resource type="Texture2D" uid="uid://br6ich3xn138j" path="res://Art/Tilesets/Tileset TEMP 1.png" id="4_gp0v0"]
[ext_resource type="Script" path="res://Main/GUI/Main Menu/Options Menu.gd" id="4_nk5j1"]
[ext_resource type="PackedScene" uid="uid://dq7y2a01bslmm" path="res://Main/GUI/Main Menu/main_menu_visualiser3.tscn" id="5_y2e1f"]
[ext_resource type="Script" path="res://Main/GUI/Main Menu/main_menu_visualiser3.gd" id="6_swfev"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_78gtd"]
texture = ExtResource("4_gp0v0")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_e40vi"]
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 4
sources/0 = SubResource("TileSetAtlasSource_78gtd")

[node name="MainMenu" type="Node"]

[node name="Main Menu" type="Control" parent="."]
layout_mode = 3
anchor_top = 0.364
anchor_right = 0.343
anchor_bottom = 0.641
offset_left = 11.0
offset_top = -142.872
offset_right = -344.136
offset_bottom = -282.368
script = ExtResource("1_q7orp")

[node name="Menu Visualiser" parent="Main Menu" instance=ExtResource("3_kwb5o")]
position = Vector2(721, 505)
collision_layer = 2147483648
collision_mask = 2147483652
input_pickable = true

[node name="Menu Visualiser2" parent="Main Menu" instance=ExtResource("3_y6a6q")]
position = Vector2(1240, 187)
collision_layer = 2147483648
collision_mask = 2147483652
input_pickable = true
script = ExtResource("4_26jf7")

[node name="Menu Visualiser3" parent="Main Menu" instance=ExtResource("5_y2e1f")]
position = Vector2(715, -259)
collision_layer = 2147483648
collision_mask = 2147483652
input_pickable = true
script = ExtResource("6_swfev")

[node name="TileMap" type="TileMap" parent="Main Menu"]
tile_set = SubResource("TileSet_e40vi")
format = 2
layer_0/tile_data = PackedInt32Array(2490411, 0, 0, 2490412, 0, 0, 2490413, 0, 0, 2490414, 0, 0, 2490415, 0, 0, 2490416, 0, 0, 2490408, 0, 0, 2490409, 0, 0, 2490410, 0, 0, 589822, 65536, 0, 655358, 0, 0, 720894, 0, 0, 786430, 0, 0, 851966, 0, 0, 917502, 0, 0, 983038, 0, 0, 1048574, 0, 0, 1114110, 0, 0, 1179646, 0, 0, 1245182, 0, 0, 1310718, 0, 0, 1376254, 0, 0, 1441790, 0, 0, 1507326, 0, 0, 2490418, 0, 0, 2490417, 0, 0, 2490407, 0, 0, 2490406, 0, 0, 2490405, 0, 0, 2490404, 0, 0, 2490403, 0, 0, 2490402, 0, 0, 2490401, 0, 0, 2490419, 0, 0, 2490420, 0, 0, 2490421, 0, 0, 2490422, 0, 0, 2490423, 0, 0, 2490424, 0, 0, 2490425, 0, 0, 2490426, 0, 0, 2490427, 0, 0, 524369, 0, 0, 589905, 0, 0, 655441, 0, 0, 720977, 0, 0, 786513, 0, 0, 852049, 0, 0, 917585, 0, 0, 983121, 0, 0, 1048657, 0, 0, 1114193, 0, 0, 1179729, 0, 0, 1245265, 0, 0, 1310801, 0, 0, 1376337, 0, 0, 1441873, 0, 0, 1507409, 0, 0, 1572945, 0, 0, 1638481, 0, 0, 1704017, 0, 0, 1769553, 65536, 0, 2490400, 65536, 0, 2490399, 65536, 0, 2490398, 65536, 0, 2490397, 65536, 0, 2490396, 65536, 0, 2490395, 65536, 0, 2490394, 65536, 0, 2490393, 65536, 0, 2490392, 65536, 0, 2490391, 65536, 0, 2490390, 65536, 0, 2490389, 65536, 0, 2490388, 65536, 0, 2490387, 65536, 0, 2490386, 65536, 0, 2490385, 65536, 0, 2490384, 65536, 0, 2490383, 65536, 0, 2490382, 65536, 0, 2490381, 65536, 0, 2490380, 65536, 0, 2490379, 65536, 0, 2490378, 65536, 0, 2490377, 65536, 0, 1572862, 65536, 0, 1638398, 65536, 0, 1703934, 65536, 0, 1769470, 65536, 0, 1835006, 65536, 0, 1900542, 65536, 0, 1966078, 65536, 0, 2031614, 65536, 0, 2097150, 65536, 0, 2162686, 65536, 0, 2228222, 65536, 0, 2293758, 65536, 0, 2359294, 65536, 0, 2424830, 65536, 0, 2490366, 65536, 0, 2555902, 65536, 0, 2555903, 65536, 0, 2490368, 65536, 0, 2490369, 65536, 0, 2490370, 65536, 0, 2490371, 65536, 0, 2490372, 65536, 0, 2490373, 65536, 0, 2490374, 65536, 0, 2490375, 65536, 0, 2490376, 65536, 0, 1835089, 65536, 0, 1900625, 65536, 0, 1966161, 65536, 0, 2031697, 65536, 0, 2097233, 65536, 0, 2162769, 65536, 0, 2228305, 65536, 0, 2293841, 65536, 0, 2359377, 65536, 0, 2490428, 65536, 0, 2490429, 65536, 0, 2490430, 65536, 0, 2490431, 65536, 0, 2490432, 65536, 0, 2490433, 65536, 0, 2490434, 65536, 0, 2490435, 65536, 0, 2490436, 65536, 0, 2490437, 65536, 0, 2490438, 65536, 0, 2490439, 65536, 0, 2490440, 65536, 0, 2490441, 65536, 0, 2490442, 65536, 0, 2490443, 65536, 0, 2490444, 65536, 0, 2490445, 65536, 0, 2490446, 65536, 0, 2490447, 65536, 0, 2490448, 65536, 0, 2490449, 65536, 0, 2424913, 65536, 0, 458833, 65536, 0, 393297, 65536, 0, 327761, 65536, 0, 262225, 65536, 0, 196689, 65536, 0, 131153, 65536, 0, 65617, 65536, 0, 81, 65536, 0, -65455, 65536, 0, -130991, 65536, 0, -196527, 65536, 0, -262063, 65536, 0, -327599, 65536, 0, -393135, 65536, 0, -458671, 65536, 0, -524207, 65536, 0, -589743, 65536, 0, -655279, 65536, 0, -720815, 65536, 0, -786351, 65536, 0, -851887, 65536, 0, -917423, 65536, 0, -982959, 65536, 0, -1048495, 65536, 0, -1114031, 65536, 0, -1179567, 65536, 0, -1245103, 65536, 0, -1310640, 65536, 0, -1310641, 65536, 0, -1310642, 65536, 0, -1310643, 65536, 0, -1310644, 65536, 0, -1310645, 65536, 0, -1310639, 65536, 0, -1310646, 65536, 0, -1310647, 65536, 0, -1310648, 65536, 0, -1310649, 65536, 0, -1310650, 65536, 0, -1310651, 65536, 0, -1310652, 65536, 0, -1310653, 65536, 0, -1310654, 65536, 0, -1310655, 65536, 0, -1310656, 65536, 0, -1310657, 65536, 0, -1310658, 65536, 0, -1310659, 65536, 0, -1310660, 65536, 0, -1310661, 65536, 0, -1310662, 65536, 0, -1310663, 65536, 0, -1310664, 65536, 0, -1310665, 65536, 0, -1310666, 65536, 0, -1310667, 65536, 0, -1310668, 65536, 0, -1310669, 65536, 0, -1310670, 65536, 0, -1310671, 65536, 0, -1310672, 65536, 0, -1310673, 65536, 0, -1310674, 65536, 0, -1310675, 65536, 0, -1310676, 65536, 0, -1310677, 65536, 0, -1310678, 65536, 0, -1310679, 65536, 0, -1310680, 65536, 0, -1310681, 65536, 0, -1310682, 65536, 0, -1310683, 65536, 0, -1310684, 65536, 0, -1310685, 65536, 0, -1310686, 65536, 0, -1310687, 65536, 0, -1310688, 65536, 0, -1310689, 65536, 0, -1310690, 65536, 0, -1310691, 65536, 0, -1310692, 65536, 0, -1310693, 65536, 0, -1310694, 65536, 0, -1310695, 65536, 0, -1310696, 65536, 0, -1310697, 65536, 0, -1310698, 65536, 0, -1310699, 65536, 0, -1310700, 65536, 0, -1310701, 65536, 0, -1310702, 65536, 0, -1310703, 65536, 0, -1310704, 65536, 0, -1310705, 65536, 0, -1310706, 65536, 0, -1310707, 65536, 0, -1310708, 65536, 0, -1310709, 65536, 0, -1310710, 65536, 0, -1310711, 65536, 0, -1310712, 65536, 0, -1310713, 65536, 0, -1310714, 65536, 0, -1310715, 65536, 0, -1310716, 65536, 0, -1310717, 65536, 0, -1310718, 65536, 0, -1310719, 65536, 0, -1310720, 65536, 0, -1245185, 65536, 0, -1245186, 65536, 0, -1179650, 65536, 0, -1114114, 65536, 0, -1048578, 65536, 0, -983042, 65536, 0, -917506, 65536, 0, -851970, 65536, 0, -786434, 65536, 0, -720898, 65536, 0, -655362, 65536, 0, -589826, 65536, 0, -524290, 65536, 0, -458754, 65536, 0, -393218, 65536, 0, -327682, 65536, 0, -262146, 65536, 0, -196610, 65536, 0, -131074, 65536, 0, -65538, 65536, 0, -2, 65536, 0, 65534, 65536, 0, 131070, 65536, 0, 196606, 65536, 0, 262142, 65536, 0, 327678, 65536, 0, 393214, 65536, 0, 458750, 65536, 0, 524286, 65536, 0)

[node name="MarginContainer" type="MarginContainer" parent="Main Menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 139.0
offset_right = 376.0
offset_bottom = 532.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.23

[node name="New Game" type="Button" parent="Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load" type="Button" parent="Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Options" type="Button" parent="Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("2_mpa0q")

[node name="Load Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_o07qf")

[node name="Save Games" type="Control" parent="Load Menu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="MarginContainer" parent="Load Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back Button" type="Button" parent="Load Menu/Back"]
layout_mode = 2
text = "Back"

[node name="Options Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 11.0
offset_top = 93.0
offset_right = 51.0
offset_bottom = 133.0
script = ExtResource("4_nk5j1")

[node name="MarginContainer" type="MarginContainer" parent="Options Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="MarginContainer" parent="Options Menu"]
layout_mode = 0
offset_left = -11.0
offset_top = -93.0
offset_right = 29.0
offset_bottom = -53.0

[node name="Back Button" type="Button" parent="Options Menu/Back"]
layout_mode = 2
text = "Back"

[connection signal="load_menu" from="Main Menu" to="Load Menu" method="_on_main_menu_load_menu"]
[connection signal="option_menu" from="Main Menu" to="Options Menu" method="_on_main_menu_option_menu"]
[connection signal="mouse_entered" from="Main Menu/Menu Visualiser" to="Main Menu/Menu Visualiser" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Main Menu/Menu Visualiser" to="Main Menu/Menu Visualiser" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Main Menu/Menu Visualiser2" to="Main Menu/Menu Visualiser2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Main Menu/Menu Visualiser2" to="Main Menu/Menu Visualiser2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Main Menu/Menu Visualiser3" to="Main Menu/Menu Visualiser3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Main Menu/Menu Visualiser3" to="Main Menu/Menu Visualiser3" method="_on_mouse_exited"]
[connection signal="pressed" from="Main Menu/MarginContainer/VBoxContainer/New Game" to="Main Menu" method="_on_start_pressed"]
[connection signal="pressed" from="Main Menu/MarginContainer/VBoxContainer/Load" to="Main Menu" method="_on_load_pressed"]
[connection signal="pressed" from="Main Menu/MarginContainer/VBoxContainer/Options" to="Main Menu" method="_on_options_pressed"]
[connection signal="back" from="Load Menu" to="Main Menu" method="_on_load_menu_back"]
[connection signal="pressed" from="Load Menu/Back/Back Button" to="Load Menu" method="_on_back_button_pressed"]
[connection signal="back" from="Options Menu" to="Main Menu" method="_on_options_menu_back"]
[connection signal="pressed" from="Options Menu/Back/Back Button" to="Options Menu" method="_on_back_button_pressed"]
